# cpp-starter-sharedlibs

./: CMakeLists.txt
include/: hello.h
src/: hello.cpp  main.cpp
